--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pytest
 
 script:
-  - travis_wait py.test test_qualisys.py --cov src/ --cov-report term-missing
+  - py.test -vv test_qualisys.py --cov src/ --cov-report term-missing
 
 after_succes:
   - coveralls
